--- a/init.u0.rc
+++ b/init.u0.rc
@@ -26,6 +26,29 @@ on boot
     write /sys/kernel/mm/ksm/sleep_millisecs 500
     write /sys/kernel/mm/ksm/run 1
 
+## Power profiles (CM QS tile)
+
+# Powersave
+on property:sys.perf.profile=0
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor smartassH3
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1008000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 122880
+    echo '480000 4' > /sys/devices/system/cpu/cpu0/cpufreq/vdd_levels
+    echo '600000 5' > /sys/devices/system/cpu/cpu0/cpufreq/vdd_levels
+    echo '1008000 6' > /sys/devices/system/cpu/cpu0/cpufreq/vdd_levels
+
+# Balanced
+on property:sys.perf.profile=1
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor smartmax
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1100000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 245760
+
+# High performance
+on property:sys.perf.profile=2
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1200000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 245760
+
 ## chargermode will crash badly unless USB is configured
 on property:init.svc.charger=running
     write /sys/devices/platform/i2c-gpio.5/i2c-5/5-0038/backlight/lm3530-bl/brightness 120
