--- a/init.u0.rc
+++ b/init.u0.rc
@@ -30,24 +30,24 @@ on boot
 
 # Powersave
 on property:sys.perf.profile=0
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor smartassH3
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1008000
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 122880
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "smartassH3"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq "1008000"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq "122880"
     echo '480000 4' > /sys/devices/system/cpu/cpu0/cpufreq/vdd_levels
     echo '600000 5' > /sys/devices/system/cpu/cpu0/cpufreq/vdd_levels
     echo '1008000 6' > /sys/devices/system/cpu/cpu0/cpufreq/vdd_levels
 
 # Balanced
 on property:sys.perf.profile=1
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor smartmax
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1100000
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 245760
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "smartmax"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq "1100000"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq "245760"
 
 # High performance
 on property:sys.perf.profile=2
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1200000
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 245760
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "performance"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq "1200000"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq "245760"
 
 ## chargermode will crash badly unless USB is configured
 on property:init.svc.charger=running
